Added chapter for automized notification when there are new entries in the snare-logfile + todos

--- a/Dokumentation/Dokumentation/07_implementierung.tex
+++ b/Dokumentation/Dokumentation/07_implementierung.tex
@@ -477,6 +477,15 @@ grep 'Request path:' snare.log |
 
 Durch die gleiche Vorgehensweise werden auch alle angeforderten Pfade extrahiert. Um eine statistische Auswertung durchführen zu können, wurde an dieser Stelle auf die Verwendung von uniq verzichtet.
 
+TODO: Statistische Auswertung.
+
+\subsection{Benachrichtigung bei Zugriff auf Web-Honeypot}
+\label{subsec:Installation und Konfiguration SNARE}
+
+Aufgrund von Erfahrungen bei der Verwendung einer automatischen Benachrichtigung bei dem SSH-Honeypot Kippo, hat sich das Projektteam dazu entschlossen, beim Web-Honeypot drei Mal täglich auf Veränderungen des Log-Files zu prüfen und die Projektmitglieder über neue Einträge in Kenntniss zu setzen.
+
+TODO: Implementierung.
+
 \section{Archivierung und Automatisierung}
 \label{sec:Archivierung und Automatisierung}
 
