--- a/Dokumentation/Dokumentation/99_anhang.tex
+++ b/Dokumentation/Dokumentation/99_anhang.tex
@@ -86,3 +86,17 @@
        \label{lst:reverse_dns},
        captionpos=b,language={}]
  {listings/reverse-dns.txt}
+ 
+ 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+\newpage 
+ 
+\section*{POST- und Path-Requests extrahieren}
+\label{app:POST- und Path-Requests extrahieren}
+
+\lstinputlisting
+    [caption={Ausgabe der POST- und Path-Requests}
+       \label{lst:reverse_dns},
+       captionpos=b,language={}]
+ {listings/reverse-dns.txt} 
+ 
