Added evaluated and formatted log-file analysis to listings

--- a/Dokumentation/Dokumentation/99_anhang.tex
+++ b/Dokumentation/Dokumentation/99_anhang.tex
@@ -95,8 +95,14 @@
 \label{app:POST- und Path-Requests extrahieren}
 
 \lstinputlisting
-    [caption={Ausgabe der POST- und Path-Requests}
-       \label{lst:reverse_dns},
+    [caption={Ausgabe der Path-Requests}
+       \label{lst:snare-path-requests},
        captionpos=b,language={}]
- {listings/reverse-dns.txt} 
+ {listings/snare-path-requests.txt} 
+ 
+ \lstinputlisting
+    [caption={Ausgabe der POST-Requests}
+       \label{lst:snare-post-requests},
+       captionpos=b,language={}]
+ {listings/snare-post-requests.txt} 
  
