--- a/Dokumentation/Dokumentation/99_anhang.tex
+++ b/Dokumentation/Dokumentation/99_anhang.tex
@@ -95,10 +95,29 @@
 \label{app:POST- und Path-Requests extrahieren}
 
 \lstinputlisting
+    [caption={Skript zur Extraktion von POST- und Path-Requests aus SNARE-Logfile}
+       \label{lst:mitm_onmsg},
+       captionpos=b,language=bash,style=customccolor]
+ {listings/extract_snare_logfile_entries.sh}
+ 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+\newpage
+ 
+\section*{Auswertung snare-path-requests}
+\label{app:Auswertung snare-path-requests}
+
+\lstinputlisting
     [caption={Ausgabe der Path-Requests}
        \label{lst:snare-path-requests},
        captionpos=b,language={}]
  {listings/snare-path-requests.txt} 
+ 
+ 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+\newpage
+
+\section*{Auswertung snare-post-requests}
+\label{app:Auswertung snare-post-requests}
  
  \lstinputlisting
     [caption={Ausgabe der POST-Requests}
