--- a/Dokumentation/Dokumentation/06_auswahl.tex
+++ b/Dokumentation/Dokumentation/06_auswahl.tex
@@ -1,4 +1,19 @@
 \chapter{Bewertung und Auswahl der Lösung}
 \label{ch:Bewertung und Auswahl der Lösung}
 
-...
+% einleitung
+Dieses Kapitel .. \\
+
+
+% bewertung der lösungen zum system + infrastruktur
+Für das Honeypotsystem wird mindestens ein oder gar mehrere Hostsysteme benötigt. Im Kapiter \ref{ch:Lösungsansätze} wurden dazu die möglichen Lösungen zum Hosting auf den Hochschulservern, bei einem öffentlichen Provider oder im privaten Umfeld aufgezeigt. Das Projektteam entscheidet sich hierbei für ein Hosting bei providerdienste.de. Diese Entscheidung wurde aufgrund folgender Kriterien getroffen:
+
+\begin{itemize}
+\item Bereitstellung eines vServers bei providerdienste.de innerhalb 24 Stunden - die Bereitstellung auf Hochschulservern wurde auf Anfrage auf unbestimmte Zeit datiert, wodurch eine Planung weiterer Projektschritte erschwert wird. Eine qualitativ gleichwertige Umsetzung im privaten Umfeld, die dem Angebot des Providers entspricht, kann nicht nicht innerhalb 24 Stunden umgesetzt werden
+\item je vServer eine öffentliche IPv4-Adresse - im privaten Umfeld der Projektmitglieder ist keine Nutzung einer öffentlichen IPv4-Adresse möglich. Dies begründet sich auf den Anbieter Unitymedia und deren DS Light-Anschlusstechnik, die mehrere Anschlüsse über ein NAT-Verfahren über eine öffentliche IP-Adresse bereitstellt. An den Modems der Projektmitglieder ist somit nur eine private IP-Adresse vorhanden.
+\item Remote-Konsole - diese Konsole ermöglicht die Verwaltung des vServer selbst dann, wenn kein Zugriff via SSH möglich ist. Eine Lösung in diesem Umfang ist beim Angebot des Rechenzentrums in Form eines SSH-Zugangs nicht gegeben. Im privaten Umfeld wäre für solch eine Lösung weiterer Implementierungsaufwand notwendig
+\end{itemize}
+
+Für die Implementierung setzt das Projekteam somit auf einen gemieteten vServer. Aufgrund der ausreichenden Performance des Einstiegsmodelle der vServer bei providerdienste.de sowie den zusätzlichen Kosten, die durch weitere gemietete Systeme entstehen würden, entscheidet sich das Team zur Umsetzung auf einem einzigen System.\\
+
+bewertung / auswahl honeypot dienste
